--- a/css/contact.css
+++ b/css/contact.css
@@ -30,7 +30,7 @@ h1 {
   }
   
   button, input[type="reset"] {
-    background-color: cornflowerblue;
+    background-color: #add3cb;
     color: white;
     padding: 15px;
     font-size: 1rem;
