--- a/css/nav.css
+++ b/css/nav.css
@@ -14,7 +14,10 @@ nav > ul {
     /* margin: 5px; */
     
   }
-  
+.nav-bar{
+  margin: 5px;
+  z-index: 3;
+}
 nav a {
     color: white;
     display: inline-block;
@@ -23,9 +26,7 @@ nav a {
     /* padding-right:  */
     /* transition: background-color 0.2s; */
     box-shadow: 3px 0px 0px 0px #0000004d; 
-
 }
-
 .current-page{
     background-color: #8a9990;
 }
